--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes rainbow {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+  
+  .animate-rainbow {
+    background-size: 400% 400%;
+    animation: rainbow 6s linear infinite;
+  }
+
+  
+  
+  
+  
+  
+  
